cleanup + license